# ML_Ops_ExamProject

./: .gitignore  Data.dvc  Dockerfile  LICENSE  Makefile  Py39_MLOps.yml  README.md  cloudbuild.yaml  models.dvc  profile_exam_project  profile_exam_project.prof  pyproject.toml  requirements.txt  requirements_manual.sh  setup.py  wandbproj.py
.dvc/: config
.github/workflows/: tests.yml
configs/: makedata.yaml  model.yaml  predict.yaml  sweep.yaml  training.yaml
credentials/: SecretManagerAccessor.json
data/processed/: test_dataset.pt  test_processed.csv  test_tweets.csv  train_dataset.pt  train_processed.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/2022-01-09/22-07-53/gpt2/: .pytorch_model.bin.icloud  config.json
reports/predictions/gpt2/2022-01-09/22-07-53/: evaluation_report.csv  predictions.csv
reports/predictions/gpt2/model_20220118_180941/gpt2/: evaluation_report.csv  predictions.csv
reports/predictions/gpt2/model_20220119_130748/gpt2/: evaluation_report.csv  predictions.csv
scripts/: train-cloud.sh  train-local.sh
src.egg-info/: PKG-INFO
src/data/: make_dataset.py
src/models/: model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
tests/: __init__.py  test_data.py  test_training.py
wandb/: latest-run
wandb/run-20220113_145539-7vz30cuv/: run-7vz30cuv.wandb
wandb/run-20220113_145539-7vz30cuv/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20220113_153705-mj1czore/: run-mj1czore.wandb
wandb/run-20220113_153705-mj1czore/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220113_153718-1mk4iihf/: run-1mk4iihf.wandb
wandb/run-20220113_153718-1mk4iihf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220113_160329-3oevjcf0/: run-3oevjcf0.wandb
wandb/run-20220113_160329-3oevjcf0/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220113_161852-1taxybnh/: run-1taxybnh.wandb
wandb/run-20220113_161852-1taxybnh/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220114_100910-392eoq6x/: run-392eoq6x.wandb
wandb/run-20220114_100910-392eoq6x/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20220114_101400-2c2scpwi/: run-2c2scpwi.wandb
wandb/run-20220114_101400-2c2scpwi/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220114_112105-2phn7w02/: run-2phn7w02.wandb
wandb/run-20220114_112105-2phn7w02/files/: config.yaml  wandb-metadata.json
wandb/run-20220114_112150-342ouvyt/: run-342ouvyt.wandb
wandb/run-20220114_112150-342ouvyt/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
