[project]
name = "ML Ops Examproject"
version = "0.1.0"
description = "This is the exam project of group 20 for ML Operation at DTU."
authors = [
    "David Ribberholt Ipsen <>",
    "Frederik Hartmann <>",
    "Nicolai Weisbjerg <s174466@student.dtu.dk>"
]
license = "MIT"
readme = "README.md"
python = "^3.9"
homepage = "https://github.com/NWeis97/ML_Ops_ExamProject.git"
repository = "https://github.com/NWeis97/ML_Ops_ExamProject.git"
documentation = "https://github.com/NWeis97/ML_Ops_ExamProject.git"

keywords = ["dtu_mlops", "exam-project", "transformers", "gpt-2", "ML"]

classifiers = [
    "Topic :: Machine Learning Operations"
]

# Requirements
[dependencies]
Click = "^8.0"

[dev-dependencies]
black = { version = "^21.12b0", python = "^3.9" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 60.2.0",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 100
extend-ignore = ""
max-complexity = 10

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
